# Hitomi_mcp

./: README.md  pyproject.toml  railway.toml  requirements.txt
src/hitomi/: __init__.py  image_generator.py  server.py  vision_engine.py
