[project]
name = "hitomi"
version = "1.0.0"
description = "Hitomi - Vision & Image Generation MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.32.0",
    "uvicorn>=0.24.0",
    "pillow>=10.0.0",
]

[project.scripts]
hitomi = "hitomi.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
